# Regex-Word-Matcher

./: .gitignore  Assignment1.pro  CMakeLists.txt  README.md  file1.txt  main.cpp
